--- a/index.html
+++ b/index.html
@@ -62,11 +62,25 @@
                 <br>
                 Навыки:
                 <br>
-                Оформление и наполнение интернет-магазина в CMS Bitrix, заполнение характеристик в ручном и автоматическом режиме, настройка импорта данных по загрузочным файлам поставщиков, создание и редактирование свойств товаров и торговых предложений, настройка работоспособности фильтров,
- контроль и актуализация размещенных товаров и контента, работа с графикой (Photoshop) подготовка товарных изображений (обрезать, изменить размер изображения, формат, указать размеры товара на изображении), выявление ошибок на сайте, подготовка технического задания для отдела разработки
-Управление свойствами товаров, создание фильтров, посадочных страниц, настройка импорта цен и остатков по данным поставщиков из различных каналов - облачные документы, электронная почта, прямые ссылки, настройка актуальных остатков и минимальных цен при наличии товаров на разных складах разных поставщиков
-создание карточек товаров (наполнение, обновление, анализ и доработка существующего контента), поиск необходимых фотографий, настройка фильтров и их размещение на сайте, составление описаний товаров, поиск источников информации для наполнения и обновления контента
-владение программами - word, excel, google sheets, photoshop, yandex wordstat
+                -оформление и наполнение интернет-магазина в CMS Bitrix
+                    -заполнение характеристик в ручном и
+                    автоматическом режиме
+                    -настройка импорта данных по загрузочным файлам поставщиков
+                    -создание и редактирование свойств товаров и торговых предложений
+                    -настройка работоспособности фильтров
+                    -контроль и актуализация размещенных товаров и контента
+                    -работа с графикой (Photoshop) 
+                    -подготовка товарных изображений (обрезать, изменить размер изображения, формат, указать размеры товара на
+                    изображении)
+                    -выявление ошибок на сайте, подготовка технического задания для отдела разработки
+                    -управление свойствами товаров, создание фильтров, посадочных страниц
+                    -настройка импорта цен и остатков по данным поставщиков из различных каналов - облачные документы, электронная почта, прямые ссылки,
+                    -настройка актуальных остатков и минимальных цен при наличии товаров на разных складах разных поставщиков
+                    -создание карточек товаров (наполнение, обновление, анализ и доработка существующего контента)
+                    -поиск необходимых фотографий, настройка фильтров и их размещение на сайте
+                    -составление описаний товаров
+                    -поиск источников информации для наполнения и обновления контента
+                    -владение программами - word, excel, google sheets, photoshop, yandex wordstat
             </div>
             <div class="study-three">
                 <span>2023</span>
