--- a/index.html
+++ b/index.html
@@ -62,25 +62,27 @@
                 <br>
                 Навыки:
                 <br>
-                -оформление и наполнение интернет-магазина в CMS Bitrix
-                    -заполнение характеристик в ручном и
-                    автоматическом режиме
-                    -настройка импорта данных по загрузочным файлам поставщиков
-                    -создание и редактирование свойств товаров и торговых предложений
-                    -настройка работоспособности фильтров
-                    -контроль и актуализация размещенных товаров и контента
-                    -работа с графикой (Photoshop) 
-                    -подготовка товарных изображений (обрезать, изменить размер изображения, формат, указать размеры товара на
-                    изображении)
-                    -выявление ошибок на сайте, подготовка технического задания для отдела разработки
-                    -управление свойствами товаров, создание фильтров, посадочных страниц
-                    -настройка импорта цен и остатков по данным поставщиков из различных каналов - облачные документы, электронная почта, прямые ссылки,
-                    -настройка актуальных остатков и минимальных цен при наличии товаров на разных складах разных поставщиков
-                    -создание карточек товаров (наполнение, обновление, анализ и доработка существующего контента)
-                    -поиск необходимых фотографий, настройка фильтров и их размещение на сайте
-                    -составление описаний товаров
-                    -поиск источников информации для наполнения и обновления контента
-                    -владение программами - word, excel, google sheets, photoshop, yandex wordstat
+                <ul>
+                    <li>-оформление и наполнение интернет-магазина в CMS Bitrix</li>
+                   <li> -заполнение характеристик в ручном и
+                    автоматическом режиме</li>
+                    <li>-настройка импорта данных по загрузочным файлам поставщиков</li>
+                    <li>-создание и редактирование свойств товаров и торговых предложений</li>
+                    <li>-настройка работоспособности фильтров</li>
+                    <li>-контроль и актуализация размещенных товаров и контента</li>
+                    <li>-работа с графикой (Photoshop) </li>
+                    <li>-подготовка товарных изображений (обрезать, изменить размер изображения, формат, указать размеры товара на
+                    изображении)</li>
+                    <li>-выявление ошибок на сайте, подготовка технического задания для отдела разработки</li>
+                    <li>-управление свойствами товаров, создание фильтров, посадочных страниц</li>
+                    <li>-настройка импорта цен и остатков по данным поставщиков из различных каналов - облачные документы, электронная почта, прямые ссылки</li>
+                    <li>-настройка актуальных остатков и минимальных цен при наличии товаров на разных складах разных поставщиков</li>
+                    <li>-создание карточек товаров (наполнение, обновление, анализ и доработка существующего контента)</li>
+                    <li>-поиск необходимых фотографий, настройка фильтров и их размещение на сайте</li>
+                    <li>-составление описаний товаров</li>
+                    <li>-поиск источников информации для наполнения и обновления контента</li>
+                    <li>-владение программами - word, excel, google sheets, photoshop, yandex wordstat</li>
+                    </ul>
             </div>
             <div class="study-three">
                 <span>2023</span>
