--- a/index.html
+++ b/index.html
@@ -60,28 +60,28 @@
                 <br>
                 Контент-менеджер
                 <br>
-                Навыки:
+               Обязанности:
                 <br>
                 <ul>
-                    <li>-оформление и наполнение интернет-магазина в CMS Bitrix</li>
-                   <li> -заполнение характеристик в ручном и
+                    <li>оформление и наполнение интернет-магазина в CMS Bitrix</li>
+                   <li>заполнение характеристик в ручном и
                     автоматическом режиме</li>
-                    <li>-настройка импорта данных по загрузочным файлам поставщиков</li>
-                    <li>-создание и редактирование свойств товаров и торговых предложений</li>
-                    <li>-настройка работоспособности фильтров</li>
-                    <li>-контроль и актуализация размещенных товаров и контента</li>
-                    <li>-работа с графикой (Photoshop) </li>
-                    <li>-подготовка товарных изображений (обрезать, изменить размер изображения, формат, указать размеры товара на
+                    <li>настройка импорта данных по загрузочным файлам поставщиков</li>
+                    <li>создание и редактирование свойств товаров и торговых предложений</li>
+                    <li>настройка работоспособности фильтров</li>
+                    <li>контроль и актуализация размещенных товаров и контента</li>
+                    <li>работа с графикой (Photoshop) </li>
+                    <li>подготовка товарных изображений (обрезать, изменить размер изображения, формат, указать размеры товара на
                     изображении)</li>
-                    <li>-выявление ошибок на сайте, подготовка технического задания для отдела разработки</li>
-                    <li>-управление свойствами товаров, создание фильтров, посадочных страниц</li>
-                    <li>-настройка импорта цен и остатков по данным поставщиков из различных каналов - облачные документы, электронная почта, прямые ссылки</li>
-                    <li>-настройка актуальных остатков и минимальных цен при наличии товаров на разных складах разных поставщиков</li>
-                    <li>-создание карточек товаров (наполнение, обновление, анализ и доработка существующего контента)</li>
-                    <li>-поиск необходимых фотографий, настройка фильтров и их размещение на сайте</li>
-                    <li>-составление описаний товаров</li>
-                    <li>-поиск источников информации для наполнения и обновления контента</li>
-                    <li>-владение программами - word, excel, google sheets, photoshop, yandex wordstat</li>
+                    <li>выявление ошибок на сайте, подготовка технического задания для отдела разработки</li>
+                    <li>управление свойствами товаров, создание фильтров, посадочных страниц</li>
+                    <li>настройка импорта цен и остатков по данным поставщиков из различных каналов - облачные документы, электронная почта, прямые ссылки</li>
+                    <li>настройка актуальных остатков и минимальных цен при наличии товаров на разных складах разных поставщиков</li>
+                    <li>создание карточек товаров (наполнение, обновление, анализ и доработка существующего контента)</li>
+                    <li>поиск необходимых фотографий, настройка фильтров и их размещение на сайте</li>
+                    <li>составление описаний товаров</li>
+                    <li>поиск источников информации для наполнения и обновления контента</li>
+                    <li>владение программами - word, excel, google sheets, photoshop, yandex wordstat и др.</li>
                     </ul>
             </div>
             <div class="study-three">
